fix: compensate horizontal shift when scroll is hiding

--- a/shelter/src/scss/components/_header.scss
+++ b/shelter/src/scss/components/_header.scss
@@ -12,7 +12,8 @@
     &--fixed {
         position: fixed;
         z-index: 100;
-        width: 100%;
+        left: 0;
+        right: 0;
         background-color: $color-white;
     }
 
